--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,10 +6,8 @@ version: 2.0.0
 homepage: https://github.com/chinloyal/pusher_client
 documentation: https://github.com/chinloyal/pusher_client/blob/master/README.md
 
-
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.20.0 <2.0.0"
+  sdk: ">=3.3.1 <4.0.0"
 
 dependencies:
   flutter:
