--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    namespace "com.pusher.client"
+    namespace "com.github.chinloyal.pusher_client"
     compileSdkVersion 29
 
     sourceSets {
